fix alignment on articles for banner ad horizontal

--- a/site/web/app/themes/filmthreat/assets/styles/layouts/_homepage.scss
+++ b/site/web/app/themes/filmthreat/assets/styles/layouts/_homepage.scss
@@ -231,3 +231,9 @@
     margin-bottom: 20px;
   }
 }
+
+.stagi-before-content {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
